--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,13 @@ logo: /images/new.png
 
 description:
   <p align="center">
-  <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/sajan-kedia-b06a6821/">LinkedIn</a> |
-  <a href="https://github.com/sajankedia">GitHub</a>
+  <a href="linkedin.com/in/vinoth-k-84080b156">LinkedIn</a> |  
+  <a href="https://github.com/Vinoth029">GitHub</a>
  
   <br>  
-  I'm working on Data Science, Big Data, Spark, Machine learning & NLP related problems.
-  Also handing the Big Data from real-time Ad call data.
-  Worked with IBM Research at Big Data Analytics team.
-  Working in AdTech domain for 3 years.
+  I'm having 2+ years of experience with Industrial automation and
+  more than one year of experience with manufacturing domain. Currently I'm 
+  pursuing PG program with upgrad on ML and AI.
   <br>
   </p>
 
