--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ logo: /images/new.png
 
 description:
   <p align="center">
-  <a href="linkedin.com/in/vinoth-k-84080b156">LinkedIn</a> |  
+  <a href="https://www.linkedin.com/in/vinoth-k-84080b156">LinkedIn</a> |
+
   <a href="https://github.com/Vinoth029">GitHub</a>
  
   <br>  
